build/errors/testdata/unused-variable.q
main() {
	let a = 1
}
